
Project 학습플랫폼 {
  database_type: "PostgreSQL"
}

Table user {
  id uuid [pk]
  nickname varchar
  status varchar
  deleted_at datetime
  created_at datetime
}

Table subject {
  id uuid [pk]
  name varchar
}

Table category {
  id uuid [pk]
  subject_id uuid [ref: > subject.id]
  name varchar
}

Table note {
  id uuid [pk]
  user_id uuid [ref: > user.id]
  subject_id uuid [ref: > subject.id]
  category_id uuid [ref: > category.id]
  title varchar
  content text
  created_at datetime
}

Table problem {
  id uuid [pk]
  subject_id uuid [ref: > subject.id]
  category_id uuid [ref: > category.id]
  type varchar
  question text
  answer text
  explanation text
  created_at datetime
}

Table problem_attempt {
  id uuid [pk]
  user_id uuid [ref: > user.id]
  problem_id uuid [ref: > problem.id]
  is_correct boolean
  attempted_at datetime
}

Table wrong_note {
  id uuid [pk]
  user_id uuid [ref: > user.id]
  problem_id uuid [ref: > problem.id]
  saved_at datetime
}

Table task {
  id uuid [pk]
  user_id uuid [ref: > user.id]
  content varchar
  is_goal boolean
  is_completed boolean
  due_date date
  completed_at datetime
}
